force-app/main/default/objects/Payment__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <formula>IF(ISBLANK( Payment_Date__c ), TODAY()- Due_Date__c ,  Payment_Date__c -  Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>