force-app/main/default/objects/Payment__c/fields/Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Reason__c</fullName>
    <label>Fail Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>