force-app/main/default/objects/Payment__c/fields/Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>Installment_Number__c</fullName>
    <displayFormat>IN-{00000}</displayFormat>
    <label>Installment Number</label>
    <type>AutoNumber</type>
</CustomField>