force-app/main/default/objects/Payment__c/fields/Overdue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Flag__c</fullName>
    <formula>OR( ISPICKVAL( Payment_Status__c, &apos;Overdue&apos;),  Days_Late__c &gt;0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Flag</label>
    <type>Checkbox</type>
</CustomField>