force-app/main/default/objects/Payment__c/fields/Scheduled_EMI__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_EMI__c</fullName>
    <label>Scheduled EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>