force-app/main/default/objects/Payment__c/validationRules/Paid_data_Consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_data_Consistency</fullName>
    <active>true</active>
    <description>Payment date should be mentioned based on the payment Status</description>
    <errorConditionFormula>OR(
/* payment paid and date not present */
AND(
ISPICKVAL( Payment_Status__c , &apos;Paid&apos;),
ISBLANK( Payment_Date__c )
),
/* payment not paid and date present in system */
AND(
NOT(ISPICKVAL( Payment_Status__c, &apos;Paid&apos;)),
NOT(ISBLANK( Payment_Date__c ))
)
)</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Payment date cannot be blank if payment is paid.</errorMessage>
</ValidationRule>